--- a/Sample-Func.csproj
+++ b/Sample-Func.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>Sample_Func</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="5.2.2" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
   </ItemGroup>
   <ItemGroup>
